# ml-coding-template

./: README.md
credit-card-default-tutorial/: Makefile  README.md  pyproject.toml
credit-card-default-tutorial/data/processed/: filtered_data.csv
credit-card-default-tutorial/data/raw/: data.csv  holdout.csv
credit-card-default-tutorial/docs/: Dataset Description.md
credit-card-default-tutorial/notebooks/: 1.0-jt-data-exploration.ipynb  2.0-jt-model-training.ipynb
