[project]
name = "credit_card_default_tutorial"
version = "0.0.1"
description = "A tutorial on credit-card-default"
authors = [
  { name = "Data Team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "seaborn"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["credit_card_default_tutorial"]
include = ["pyproject.toml", "credit_card_default_tutorial/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_card_default_tutorial"]
force-sort-within-sections = true

